--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.3",
-    "tailwindcss": "^4.0.3",
+    "@tailwindcss/vite": "^4.0.4",
+    "axios": "^1.7.9",
+    "pinia": "^3.0.1",
+    "tailwindcss": "^4.0.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
