--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.4",
     "vue": "^3.5.13"
