--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "dayjs-plugin-utc": "^0.1.2",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.4",
     "vue": "^3.5.13"
