--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dayjs-plugin-utc": "^0.1.2",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.4",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
